--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
+.App .weather-app {
+  max-width: max-content;
+  margin: 15px auto;
+  border-radius: 10px;
+  background-image: linear-gradient(to top, #ebbba7 0%, #cfc7f8 100%);
+}
+.App .search-city {
+  padding: 20px 20px 0px 20px;
+}
+.App .weather-today {
+  padding: 5px 20px;
+}
+.App .weather-next {
+  padding: 10px 20px;
+}
+.App .unit-conversion {
+  padding: 0 20px 10px 20px;
+}
+.App .open-code {
+  display: block;
+  font-family: "Text Me One", sans-serif;
+  color: rgb(130, 63, 146);
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  font-style: bold;
 }
