--- a/src/Current.css
+++ b/src/Current.css
@@ -1,3 +1,21 @@
+.Current .current-location {
+  font-family: "Cabin Sketch", cursive;
+  font-size: 60px;
+  text-transform: uppercase;
+  color: rgb(130, 63, 146, 0.8);
+}
+.Current .current-date {
+  font-family: "Text Me One", sans-serif;
+  font-size: 20px;
+  text-transform: capitalize;
+  color: grey;
+}
+.Current .current-feel {
+  font-family: "Text Me One", sans-serif;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: rgb(130, 63, 146, 0.8);
+}
 .Current .card-current-weather {
   background-color: rgb(130, 63, 146, 0.4);
   border: none;
@@ -42,6 +60,24 @@
 }
 
 @media screen and (max-width: 640px) {
+  .Current .current-location {
+    font-family: "Cabin Sketch", cursive;
+    font-size: 40px;
+    text-transform: uppercase;
+    color: rgb(130, 63, 146, 0.8);
+  }
+  .Current .current-date {
+    font-family: "Text Me One", sans-serif;
+    font-size: 18px;
+    text-transform: capitalize;
+    color: grey;
+  }
+  .Current .current-feel {
+    font-family: "Text Me One", sans-serif;
+    font-size: 18px;
+    text-transform: uppercase;
+    color: rgb(130, 63, 146, 0.8);
+  }
   .Current .card-current-weather {
     background-color: rgb(130, 63, 146, 0.4);
     border: none;
