--- a/src/Current.css
+++ b/src/Current.css
@@ -35,7 +35,7 @@
 .Current .min-max-current {
   text-align: right;
 }
-.Current .emoji-current {
+.Current .icon {
   font-size: 100px;
   text-align: center;
 }
@@ -99,7 +99,7 @@
     text-align: right;
     font-size: 16px;
   }
-  .Current .emoji-current {
+  img .Current {
     text-align: center;
     font-size: 60px;
   }
