--- a/src/Current.css
+++ b/src/Current.css
@@ -35,6 +35,13 @@
 .Current .min-max-current {
   text-align: right;
 }
+img.icon {
+  width: 150px;
+  height: 150px;
+}
+.Current .emoji-current {
+  text-align: center;
+}
 .Current .temperature-current {
   font-size: 100px;
   text-align: center;
@@ -95,9 +102,12 @@
     text-align: right;
     font-size: 16px;
   }
-  img .Current {
+  img.icon {
+    width: 60px;
+    height: 60px;
+  }
+  .Current .emoji-current {
     text-align: center;
-    font-size: 60px;
   }
   .Current .temperature-current {
     text-align: center;
